--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
             </article>
             <!-- Posts -->
             <section class="posts">
+                <article>
+                    <header>
+                        <span class="date">February 10, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card">
+                        <h4><a href="https://medium.com/daily-python/python-script-to-search-flights-using-goibibo-api-daily-python-25-eb08e30aaf33">Python script to search flights using Goibibo API | Daily Python #25</a></h4>
+                        <p>This article is a tutorial on how to search for flights by consuming the Goibibo API in Python. Python 3.0 Pip requests - Library to making HTTP requests. pprint - PrettyPrinter: pip install requests pprint Fill in the details
+                            and activate your account from the email received.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
 
                 <article>
                     <header>
