--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
                     <header>
                         <span class="date">February 10, 2020</span>
                     </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/@sonawaneajinks/building-a-python-bot-that-tweets-inspirational-quotes-daily-python-26-9906af4609a4">Building a Python Bot that tweets inspirational quotes | Daily Python #26</a></h4>
+                        <p>This article is a tutorial to build a bot that tweets inspirational quotes every minute using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.
+                            tweepy - Library that provides easy access to Twitter APIs requests - Library to making HTTP requests.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+
+                <article>
+                    <header>
+                        <span class="date">February 10, 2020</span>
+                    </header>
                     <blockquote class="embedly-card">
                         <h4><a href="https://medium.com/daily-python/python-script-to-search-flights-using-goibibo-api-daily-python-25-eb08e30aaf33">Python script to search flights using Goibibo API | Daily Python #25</a></h4>
                         <p>This article is a tutorial on how to search for flights by consuming the Goibibo API in Python. Python 3.0 Pip requests - Library to making HTTP requests. pprint - PrettyPrinter: pip install requests pprint Fill in the details
