--- a/index.html
+++ b/index.html
@@ -74,7 +74,18 @@
             <section class="posts">
                 <article>
                     <header>
-                        <span class="date">February 10, 2020</span>
+                        <span class="date">February 13, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/daily-python/implementing-fibonacci-search-algorithm-in-python-daily-python-27-4a6624366022">Implementing Fibonacci Search algorithm in Python | Daily Python #27</a></h4>
+                        <p>This article is a tutorial on implementing the Fibonacci Search algorithm in Python and is in continuation with Daily Python #21 This article is a part of Daily Python challenge that I have taken up for myself. I will be writing
+                            short python articles daily. There are no additional requirements for this article.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+                <article>
+                    <header>
+                        <span class="date">February 12, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
                         <h4><a href="https://medium.com/@sonawaneajinks/building-a-python-bot-that-tweets-inspirational-quotes-daily-python-26-9906af4609a4">Building a Python Bot that tweets inspirational quotes | Daily Python #26</a></h4>
@@ -86,7 +97,7 @@
 
                 <article>
                     <header>
-                        <span class="date">February 10, 2020</span>
+                        <span class="date">February 11, 2020</span>
                     </header>
                     <blockquote class="embedly-card">
                         <h4><a href="https://medium.com/daily-python/python-script-to-search-flights-using-goibibo-api-daily-python-25-eb08e30aaf33">Python script to search flights using Goibibo API | Daily Python #25</a></h4>
