--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
             <section class="posts">
                 <article>
                     <header>
+                        <span class="date">February 14, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card" data-card-controls="0">
+                        <h4><a href="https://medium.com/daily-python/python-script-to-merge-pdf-files-daily-python-28-54acdf5c0473">Python script to merge PDF Files | Daily Python #28</a></h4>
+                        <p>This article is a tutorial on how to merge PDF files using Python. This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+                <article>
+                    <header>
                         <span class="date">February 13, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
