--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
             <section class="posts">
                 <article>
                     <header>
+                        <span class="date">February 16, 2020</span>
+                    </header>
+                    <blockquote class="embedly-card">
+                        <h4><a href="https://medium.com/daily-python/solving-sudoku-puzzle-using-backtracking-in-python-daily-python-29-99a825042e">Solving Sudoku Puzzle using Backtracking in Python | Daily Python #29</a></h4>
+                        <p>This article is a tutorial on solving a sudoku puzzle using Backtracking algorithm in Python This article is a part of Daily Python challenge that I have taken up for myself. I will be writing short python articles daily. There
+                            are no additional requirements for this article.</p>
+                    </blockquote>
+                    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+                </article>
+                <article>
+                    <header>
                         <span class="date">February 14, 2020</span>
                     </header>
                     <blockquote class="embedly-card" data-card-controls="0">
