Added Rank Holder in Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -49,6 +49,16 @@
 
             <!-- Posts -->
             <section class="posts">
+
+                <article>
+                    <header>
+                        <span class="date">February 15, 2020</span>
+                        <h2><a href="#">Savitribai Phule <br/>Pune University<br />
+										TE(Computer Engineering) Rank - 7th</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/RankHolder.JPG" alt="" /></a>
+                </article>
+
                 <article>
                     <header>
                         <span class="date">January 8, 2020</span>
