Update project and CV

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="images/aj-circle.png" class="displaypic" alt="Ajinkya Sonawane's Display Picture">
         <div class="intro-text">
             <h1 class="nomargin inline">I'm Ajinkya</h1>
-            <h3 class="nomargin marginTop"><em>Yet Another Developer Developer</em> 😜</h3>
+            <h3 class="nomargin marginTop"><em>Yet Another Developer Developer!</em></h3>
             <div class="social">
                 <a class="social-link" href="https://www.linkedin.com/in/sonawaneajinks/">
                     <img class="zoom" src="images/linkedin.png" alt="Ajinkya's Linked Profile">
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div>
-                <a href="files/CV.pdf" class="social-link cv-button" download>
+                <a href="files/AjinkyaSonawane_CV.pdf" class="social-link cv-button" download>
                     <img class="zoom" src="images/cv.png" alt="Ajinkya's CV">
                 </a>
             </div>
@@ -86,11 +86,11 @@
                     <img class="zoom" src="images/drive.png" alt="Ajinkya's LAN Drive Project" title="LAN Drive Project">
                 </a>
             </div>
-            <div class="img-work">
+            <!-- <div class="img-work">
                 <a href="https://play.google.com/store/apps/details?id=com.miniproject.www.spinbottle">
                     <img class="zoom" src="images/android.png" alt="Ajinkya's Android Application" title="Bottle Spinner Android App">
                 </a>
-            </div>
+            </div> -->
         </div>
         <hr>
         <div class="contact-me">
