--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="nomargin inline">I'm Ajinkya</h1>
             <h3 class="nomargin marginTop"><em>Yet Another Developer Developer!</em></h3>
             <div class="social">
-                <a class="social-link" href="https://www.linkedin.com/in/sonawaneajinks/">
+                <a class="social-link" href="https://www.linkedin.com/in/ajinkya-sonawane/">
                     <img class="zoom" src="images/linkedin.png" alt="Ajinkya's Linked Profile">
                 </a>
                 <a class="social-link" href="https://twitter.com/sonawaneajinks">
